Closed Bug 724562 Opened 14 years ago Closed 14 years ago

IonMonkey: Assertion failure: isLowered(), at ion/MIR.h:422

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jandem, Assigned: jandem)

References

Details

Attachments

(1 file)

This assert prevents us from running my (slightly) modified ss-fannkuch benchmark.
Attached patch PatchSplinter Review
LICM bug. We have to unmark the blocks if we skipped the loop. Otherwise, if there's an inner loop, we would incorrectly skip some blocks.
Attachment #594724 - Flags: review?(dvander)
Blocking bug 724444 to avoid duplicates.
Blocks: IonFuzz
Attachment #594724 - Flags: review?(dvander) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: