Fix LICM to unmark blocks when skipping a loop (bug 724562, r=dvander)